<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TransactionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/lightGray"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <ImageButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/edit"
                android:padding="12dp"
                android:src="@drawable/baseline_edit_24"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/delete_no_question"
                android:padding="12dp"
                android:src="@drawable/baseline_delete_24"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/blackBoldH4"
                android:text="@string/name"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/grayRegularP"
                android:text="@string/description"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/blackBoldH4"
                android:text="@string/amount"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/blackRegularP"
                android:text="@string/categories"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvDatetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/grayRegularP"
                android:text="@string/datetime"
                android:layout_marginTop="12dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>