<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            style="@style/blackH2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/profit_calculator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etBuyPrice"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            style="@style/etRegular"
            android:autofillHints="numeric"
            android:hint="@string/buying_price"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/etBuyAmount"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            style="@style/etRegular"
            android:autofillHints="numeric"
            android:hint="@string/money_spent"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/etBuyPrice"
            app:layout_constraintStart_toStartOf="@+id/etBuyPrice"
            app:layout_constraintTop_toBottomOf="@+id/etBuyPrice" />

        <EditText
            android:id="@+id/etSellPrice"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            style="@style/etRegular"
            android:autofillHints="numeric"
            android:hint="@string/selling_price"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="@+id/etBuyAmount"
            app:layout_constraintStart_toStartOf="@+id/etBuyAmount"
            app:layout_constraintTop_toBottomOf="@+id/etBuyAmount" />

        <ImageView
            android:id="@+id/ivDivider"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/divider"
            android:src="@drawable/divider"
            app:layout_constraintEnd_toEndOf="@+id/etSellPrice"
            app:layout_constraintStart_toStartOf="@+id/etSellPrice"
            app:layout_constraintTop_toBottomOf="@+id/etSellPrice"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvProfit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/pt_sans_bold"
            android:text="@string/profit_no_number"
            android:textSize="34sp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="@+id/ivDivider"
            app:layout_constraintStart_toStartOf="@+id/ivDivider"
            app:layout_constraintTop_toBottomOf="@+id/ivDivider" />

        <TextView
            android:id="@+id/tvAfterBalance"
            style="@style/blackRegularP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/final_balance_no_number"
            app:layout_constraintEnd_toEndOf="@+id/tvProfit"
            app:layout_constraintStart_toStartOf="@+id/tvProfit"
            app:layout_constraintTop_toBottomOf="@+id/tvProfit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>