<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.HistoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/rgPeriod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/rbDay"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:checked="true"
                android:fontFamily="@font/pt_sans"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/day"
                android:textColor="@drawable/radio_flat_text_selector"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbWeek"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/pt_sans"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/week"
                android:textColor="@drawable/radio_flat_text_selector"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbMonth"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/pt_sans"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/month"
                android:textColor="@drawable/radio_flat_text_selector"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbYear"
                android:layout_width="96dp"
                android:layout_height="40dp"
                android:background="@drawable/radio_flat_selector"
                android:button="@android:color/transparent"
                android:fontFamily="@font/pt_sans"
                android:gravity="center"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/year"
                android:textColor="@drawable/radio_flat_text_selector"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

        </RadioGroup>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:contentDescription="@string/search"
            android:focusable="true"
            android:src="@drawable/ic_search"
            app:backgroundTint="@color/main"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTransactions"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgPeriod" />

        <TextView
            android:id="@+id/tvEmpty"
            style="@style/grayRegularP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/sadly_empty"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgPeriod" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>