<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="fragments.ConverterFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:padding="12dp"
            android:paddingBottom="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|bottom|center_vertical|fill_vertical|center|fill"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/blackRegularP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1.0"
                        android:text="@string/convert_from" />

                    <TextView
                        style="@style/blackRegularP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:text="@string/convert_to" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/dmConvertFrom"
                        style="@style/grayRegularP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1.0"
                        android:background="@android:drawable/editbox_background"
                        android:hint="@string/select_currency"
                        android:text=""
                        android:textSize="14sp"
                        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24"
                        app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24" />

                    <TextView
                        android:id="@+id/dmConvertTo"
                        style="@style/grayRegularP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:background="@android:drawable/editbox_background"
                        android:hint="@string/select_currency"
                        android:text=""
                        android:textSize="14sp"
                        app:drawableEndCompat="@drawable/baseline_arrow_drop_down_24"
                        app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top|bottom|center_vertical|fill_vertical|center|fill">

                    <TextView
                        style="@style/blackRegularP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1.0"
                        android:text="@string/amount_to_convert" />

                    <TextView
                        style="@style/blackRegularP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center"
                        android:text="@string/conversion_rate" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etAmount"
                        style="@style/etRegular"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginStart="12dp"
                        android:layout_weight="1.0"
                        android:hint="@string/amount"
                        android:autofillHints="numeric"
                        android:inputType="number"
                        android:maxLines="1"
                        tools:ignore="VisualLintTextFieldSize" />

                    <TextView
                        android:id="@+id/tvResult"
                        style="@style/blackRegularH5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:gravity="center" />

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <Button
                    android:id="@+id/btnConvert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/main"
                    android:fontFamily="@font/pt_sans_bold"
                    android:gravity="center"
                    android:text="@string/convert"
                    tools:ignore="VisualLintButtonSize" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>